--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -9,6 +9,14 @@ server {
     location /assets/ {
         expires 1y;
         add_header Cache-Control "public, immutable";
+
+        # Fix MIME type for .mjs files (ES modules, e.g. pdf.js worker)
+        location ~* \.mjs$ {
+            types { }
+            default_type application/javascript;
+            expires 1y;
+            add_header Cache-Control "public, immutable";
+        }
     }
 
     # Proxy API requests to backend
