--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -2,6 +2,11 @@ server {
     listen 80;
     server_name _;
 
+    # Docker embedded DNS (service discovery). We use a variable in proxy_pass
+    # so nginx re-resolves the backend periodically instead of caching the IP forever.
+    resolver 127.0.0.11 ipv6=off valid=10s;
+    resolver_timeout 5s;
+
     root /usr/share/nginx/html;
     index index.html;
 
@@ -21,7 +26,8 @@ server {
 
     # Proxy API requests to backend
     location /api/ {
-        proxy_pass http://backend:8000;
+        set $upstream http://invoice-backend:8000;
+        proxy_pass $upstream;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -32,7 +38,8 @@ server {
 
     # Proxy health endpoint
     location /health {
-        proxy_pass http://backend:8000;
+        set $upstream http://invoice-backend:8000;
+        proxy_pass $upstream;
     }
 
     # SPA fallback: serve index.html for all other routes
