--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -42,8 +42,11 @@ server {
         proxy_pass $upstream;
     }
 
-    # SPA fallback: serve index.html for all other routes
+    # SPA fallback: serve index.html for all other routes (no caching for HTML)
     location / {
+        add_header Cache-Control "no-cache, no-store, must-revalidate";
+        add_header Pragma "no-cache";
+        add_header Expires 0;
         try_files $uri $uri/ /index.html;
     }
 }
